<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Email Hub</string>
    <string name="title_settings">Settings</string>

    <string name="label_server_url">EmailHub Server URL</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_show_password">Show password</string>

    <string name="action_save">Save &amp; Connect</string>
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>

    <string name="msg_configure_first">Please configure your EmailHub server, username and password to continue.</string>
    <string name="msg_all_fields">All fields are required</string>
    <string name="msg_invalid_url">URL must start with http:// or https://</string>
    <string name="msg_saved">Saved. Connecting…</string>
    <string name="msg_cleared">Saved credentials cleared</string>
    <string name="msg_logout_confirm">Clear saved session and return to settings?</string>
</resources>
